  * Document -g and -G options in dpkg-genchanges(1). Closes: #766568
  * Do not accept values bundled with long options in dpkg-parsechangelog.
    The parser was accepting things like «--count10», which is just broken.
    Instead allow only «--count=10» in addition to «--count 10».
  * Accept «-S value» in addition to «-Svalue» in dpkg-parsechangelog.
    Closes: #766559

  [ Updated programs translations ]
  * Catalan (Guillem Jover).
  * German (Sven Joachim) (Closes: #766311).
  * Simplified Chinese (Zhou Mo).

  [ Updated scripts translations ]
  * Catalan (Guillem Jover).

 -- Guillem Jover <guillem@debian.org>  Thu, 23 Oct 2014 02:12:01 +0200

dpkg (1.17.20) unstable; urgency=low

  [ Guillem Jover ]
  * Add a requeueing insertion protection for process_queue().
  * Make sure to always switch to the next dependtry after we have made no
    progress for a while. Regression stemming from non future proof changes
    introduced with the initial triggers implementation in dpkg 1.14.17
    combined with changes in dpkg 1.17.19. Closes: #766242, #766322
  * Make the initial dependtry be 1 instead of 0. This gets rid of an unused
    dependtry step, which got accidentally introduced when the perl dpkg was
    rewritten in C, ages ago.
  * Allow detached upstream signatures for upstream orig.tar files in the
    .dsc file. Suggested by Daniel Kahn Gillmor <dkg@fifthhorseman.net>.
    Closes: #759478
  * Inline alternative status description into translatable string in
    update-alternatives. Required-by: #766311
  * Reword description for installed status in dpkg(1) man page.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Simplified Chinese (Zhou Mo).
  * Vietnamese (Trần Ngọc Quân).

 -- Guillem Jover <guillem@debian.org>  Thu, 23 Oct 2014 00:43:05 +0200

dpkg (1.17.19) unstable; urgency=low

  [ Guillem Jover ]
  * Bump the Breaks on devscripts to 2.14.10 due to the new dpkg-architecture