@@ -71,6 +71,10 @@ added to T's trigger processing awaited list and T's status is unchanged.
 T may be considered installed even though I may not yet have processed
 the trigger.
 .TP
+.BR \-\-await
+This option does the inverse of \fB\-\-no\-await\fP. It is currently the
+default behavior.
+.TP
 .BR \-\-no\-act
 Just test, do not actually change anything.
 .
