@@ -10,6 +10,10 @@ dpkg (1.17.21) UNRELEASED; urgency=low
     Instead allow only «--count=10» in addition to «--count 10».
   * Accept «-S value» in addition to «-Svalue» in dpkg-parsechangelog.
     Closes: #766559
+  * Add support for new interest-await and activate-await trigger directives.
+    And a new --await option to dpkg-trigger. This might allow possibly
+    switching the default meaning after a transition period no shorter than
+    two minor versions, so in 1.19.x or 1.20.x. Perhaps.
 
   [ Updated programs translations ]
   * Catalan (Guillem Jover).
